[project]
name = "twitter_analyzer"
version = "1.0.0"
description = "Twitter Analysis Application with Flask"
dependencies = [
    "flask",
    "python-dotenv",
    "flask-sqlalchemy",
    "flask-wtf",
    "flask-login",
    "jdatetime",
    "requests",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
